// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar renders back-button-slot 1`] = `
<div
  class="fd-action-bar__header"
>
  <button
    class="fd-button"
  >
    <i
      class="sap-icon--nav-back"
    />
     
  </button>
    
</div>
`;

exports[`ActionBar renders correctly in it's full glory 1`] = `
<div
  class="fd-action-bar"
>
  <div
    class="fd-action-bar__header"
  >
    <div
      class="fd-action-bar__back"
    >
      <button
        class="fd-button fd-button--transparent"
      >
        <i
          class="sap-icon--nav-back"
        />
         
      </button>
    </div>
     
    <div
      class="fd-action-bar__title"
    >
      Action Bar Title
    </div>
     
    <div
      class="fd-action-bar__actions"
    >
      <button
        class="fd-button fd-button--positive"
      >
        <i
          class="sap-icon--accept"
        />
         Approve
      </button>
       
      <button
        class="fd-button fd-button--negative"
      >
        <i
          class="sap-icon--decline"
        />
         Reject
      </button>
    </div>
  </div>
   
  <p
    class="fd-action-bar__description fd-action-bar__description--back"
  >
    Action Bar Description
  </p>
</div>
`;

exports[`ActionBar renders header-title-slot 1`] = `
<div
  class="fd-action-bar__header"
>
   
  <div
    class="fd-action-bar__title"
  >
    Action Bar Title
  </div>
   
</div>
`;
